--- a/src/App.css
+++ b/src/App.css
@@ -2,3 +2,11 @@ body{
   --twitter-color: #50b7f5;
   --twitter-background: #e6ecf0; 
 }
+.app{
+  height: 100vh;
+  display: flex;
+  max-width: 1300px;
+  margin-left: none; 
+  margin-right: auto;
+  padding: 0 10px;
+}
