--- a/src/Sidebar.css
+++ b/src/Sidebar.css
@@ -1,7 +1,7 @@
 .sidebar{
     border-right: 1px solid var(--twitter-background);
     flex: 0.3; /*uses 30% of the entire screen. */
-    min-width: 250px;
+    min-width: 300px;
     margin-left: 20px; 
     margin-right: 0px;
 }
@@ -22,6 +22,20 @@
     text-transform: inherit !important;
     border-radius: 30px !important;
     height: 50px !important;
-    margin-top: 20px im !important;
+    margin-top: 20px !important;
     width: 90% !important;
+}
+
+/* .sidebar__Xlogo{
+    font-size: 50 px !important;
+    margin: 10px 20px ;
+    margin-bottom: 20 px;
+    padding-left: 50px;
+} */
+
+.r-8kz0gk {
+    height: 2rem;
+}
+.r-gupqjj {
+    width: 45;
 }
